# informity-ai

./: .env.appstore.example  .env.codesign.example  .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  latest.json  pyproject.toml
.github/workflows/: ci.yml  update-latest-json.yml
.internal/work/active/: ollama.md
scripts/: bootstrap_models.py  build_generate_tauri_icons.py  build_rename_tauri_dmg_artifacts.sh  build_set_dmg_volume_icon.sh  build_tauri_appstore_release.sh  build_tauri_backend_sidecar.sh  build_tauri_linux_release.sh  build_tauri_signed_release.sh  full_reset_and_install.sh  generate_tauri_icons.py  install.conf.json  install.sh  install_app.sh  install_bootstrap_models.py  install_common_paths.sh  install_uninstall_app.sh  reset.sh  uninstall.sh
scripts/dev/: use_local_promptcue.sh
src/frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
src/frontend/src/: App.css  App.tsx  api.stream.test.ts  api.ts  index.css  main.tsx  tauriRuntime.ts  vite-env.d.ts
src/frontend/src-tauri/: Cargo.toml  Entitlements.plist  build.rs  tauri.appstore.conf.json  tauri.conf.json
src/frontend/src-tauri/backend/: README.md
src/frontend/src-tauri/capabilities/: default.json
src/frontend/src-tauri/icons/: dmg-volume-icon.icns  icon.icns
src/frontend/src-tauri/src/: main.rs
src/frontend/src/components/: CenteredState.css  CenteredState.tsx  ConfirmDialog.css  ConfirmDialog.tsx  ErrorBoundary.css  ErrorBoundary.tsx  KeyboardShortcutsModal.css  KeyboardShortcutsModal.tsx  Layout.css  Layout.tsx  ModelOperationBanner.css  ModelOperationBanner.tsx  NetworkBanner.css  NetworkBanner.tsx  PageFooter.css  PageFooter.tsx  PageHeader.tsx  ServiceUnavailableState.tsx  Sidebar.css  Sidebar.test.tsx  Sidebar.tsx  Skeleton.css  Skeleton.tsx  SortIcon.tsx  StateMessage.css  StateMessage.tsx  UpdateCheckModal.css  UpdateCheckModal.test.tsx  UpdateCheckModal.tsx
src/frontend/src/context/: BackendStatusProvider.tsx  ChatProvider.streaming.test.tsx  ChatProvider.tsx  ConfirmProvider.tsx  Toast.css  ToastProvider.tsx  backendStatusContext.ts  chatContext.ts  confirmContext.ts  toastContext.ts  useBackendStatus.ts  useChatContext.ts  useConfirm.ts  useToast.ts
src/frontend/src/pages/: ChatPage.tsx  ConfigurationPage.css  ConfigurationPage.tsx  DashboardPage.tsx  FilesPage.tsx  HistoryPage.tsx  LogsPage.css  LogsPage.tsx  PlaceholderPage.css  SettingsPage.tsx  SetupRequiredPage.css  SetupRequiredPage.tsx
src/frontend/src/types/: api.ts  (+1 more)
src/informity/: answer_sanitization.py  category_patterns.py  chat_trace.py  config.py  exceptions.py  file_patterns.py  file_types.py  log_events.py  logging_config.py  main.py  markdown_export.py  timeout_policy.py  upload_policy.py  version.py
src/informity/api/: chat_closeout.py  chat_completion_policy.py  chat_continuation.py  chat_orchestrator.py  chat_out_of_corpus.py  chat_sources.py  chat_sse.py  chat_stream_registry.py  config_reference_metadata.py  context_scope_manager.py  env_vars_metadata.py  error_messages.py  operation_state.py  role_evidence_fallback.py  routes_chat.py  routes_index.py  routes_logs.py  routes_scan.py  routes_search.py  routes_settings.py  routes_system.py  schemas.py  security.py  setup_state.py
src/informity/db/: models.py  sqlite.py  utils.py  vectors.py
src/informity/diagnostics/: __init__.py  contract_closeout.py  grounding_verifier.py  issue_types.py  observer.py  resource_snapshot.py
src/informity/indexer/: adaptive_tuning.py  chunker.py  classifier.py  embedder.py  pipeline.py  post_process.py  reranker.py  term_dictionary_builder.py  term_dictionary_quality.py
src/informity/llm/: chat_mode.py  classification_policy.py  contract_gate.py  contract_prompt_parser.py  engine.py  fit_to_budget_tuning.py  intent_normalization.py  intent_profiles.py  intent_router.py  metadata_filters.py  metrics_payload.py  model_adapter.py  nlp_heuristics.py  personas.py  planner.py  prompt_builder.py  promptcue_adapter.py  promptcue_signals.py  query_classifier.py  query_classifier_llm.py  query_patterns.py  query_rewrite.py  rag.py  rag_patterns.py  retrieval.py  roles.py  streaming.py  system_prompts.py  term_dictionary.py  timeout_policy.py  types.py  user_messages.py  web_search.py
src/informity/mcp/: authorization.py  categories.py  constants.py  http_server.py  lifecycle.py  protocol.py  server.py  stdio_server.py  tool_registry.py  tools_readonly.py
src/informity/scanner/: crawler.py  watcher.py
src/informity/sources/: __init__.py  base.py  filesystem_adapter.py  orchestrator.py  registry.py
src/informity/utils/: __init__.py  directory_utils.py  file_utils.py  json_utils.py  number_utils.py  path_utils.py
tests/: conftest.py  test_adaptive_tuning.py  test_answer_sanitization.py  test_api_security.py  test_chat_closeout.py  test_chat_completion_policy.py  test_chat_continuation_helpers.py  test_chat_history_preview_length.py  test_chat_mode_policy.py  test_chat_out_of_corpus.py  test_chat_request_schema.py  test_chat_sources.py  test_chat_stop_schema.py  test_chat_stream_registry.py  test_chat_trace.py  test_chat_upload_attachment_content_hash.py  test_chat_upload_delete_lifecycle.py  test_chat_upload_policy_routes.py  test_chat_upload_scope_resolution.py  test_chunker.py  test_classification_policy.py  test_config.py  test_config_pathing.py  test_contract_prompt_parser.py  test_crawler.py  test_diagnostics_contract_parity.py  test_diagnostics_metrics_contract.py  test_diagnostics_observer.py  test_diagnostics_pipeline_phase_lite.py  test_diagnostics_role_matrix.py  test_diagnostics_run_control.py  test_diagnostics_tools.py  test_embedder.py  test_engine.py  test_env_vars_metadata.py  test_extractors.py  test_file_patterns_year_extraction.py  test_generation_runtime_modules.py  test_generation_stream_contract.py  test_grounding_verifier.py  (+57 more)
tests/fixtures/: chat_rendering_fixtures.json  malformed_output_fixtures.json  sample.docx  sample.html  sample.md  sample.pptx  sample.txt  sample.xlsx
tests/integration/: conftest.py  test_retrieval.py
(+90 files in other folders)
