# ==============================================================================
# Informity AI — pyproject.toml
# Privacy-first local document intelligence for macOS
# ==============================================================================

[project]
name = "informity"
version = "0.8.0"
description = "A macOS desktop app that scans local files, indexes them with vector embeddings, and provides RAG-based chat using a local LLM."
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Informity AI Team"},
]

# ==============================================================================
# Dependencies
# ==============================================================================
dependencies = [
    "aiosqlite>=0.22.1",
    "charset-normalizer==3.4.4",
    "dateparser==1.3.0",
    "docling>=2.74.0",
    "einops>=0.8.1",
    "fastapi>=0.129.0",
    "gguf>=0.10.0",
    "huggingface-hub>=0.23,<1",
    "jinja2>=3.1.6",
    "nltk>=3.9.2",
    "pathspec==1.0.4",
    "pillow>=12.1.1",
    "promptcue==0.2.1",
    "psutil>=6.1.0",
    "pydantic-settings>=2.13.0",
    "pydantic>=2.12.5",
    "pysbd>=0.3.4",
    "pypdfium2>=5.0.0",
    "rapidocr-onnxruntime>=1.4.4",
    "sentence-transformers>=5.2.2",
    "sqlite-vec>=0.1.0",
    "sse-starlette>=3.2.0",
    "structlog>=25.5.0",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "uvicorn>=0.41.0",
    "watchdog>=6.0.0",
    "xllamacpp>=0.2.13",
]

# ==============================================================================
# Optional dependency groups
# ==============================================================================
[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pyinstaller>=6.19.0",
    "pymupdf>=1.27.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.1",
]

# ==============================================================================
# Build system
# ==============================================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/informity"]

# ==============================================================================
# Tool configuration
# ==============================================================================
[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # Depends() in function defaults — standard FastAPI pattern
]

[tool.ruff.lint.isort]
known-first-party = ["informity"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
