# ==============================================================================
# Informity AI — pyproject.toml
# Privacy-first local document intelligence for macOS
# ==============================================================================

[project]
name = "informity"
version = "0.12.0"
description = "A macOS desktop app that scans local files, indexes them with vector embeddings, and provides RAG-based chat using a local LLM."
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Informity AI Team"},
]

# ==============================================================================
# Dependencies
# ==============================================================================
dependencies = [
    "aiosqlite>=0.22.1",
    "charset-normalizer==3.4.7",
    "dateparser==1.4.0",
    "docling>=2.90.0",
    "EbookLib>=0.18",
    "einops>=0.8.2",
    "fastapi>=0.136.0",
    "gguf>=0.18.0",
    "huggingface-hub>=1.0,<2",
    "jinja2>=3.1.6",
    "nameparser==1.1.3",
    "nltk>=3.9.4",
    "pathspec==1.0.4",
    "pillow>=12.2.0",
    "promptcue==0.3.8",
    "psutil>=7.2.2",
    "pydantic-settings>=2.13.1",
    "pydantic>=2.13.2",
    "pypdfium2>=5.7.0",
    "pysbd>=0.3.4",
    "python-multipart==0.0.26",
    "rapidocr-onnxruntime>=1.4.4",
    "sentence-transformers>=5.4.1",
    "sqlite-vec>=0.1.9",
    "sse-starlette>=3.3.4",
    "structlog>=25.5.0",
    "thinkstrip==0.2.2",
    "tiktoken>=0.12.0",
    "torch>=2.11.0",
    "uvicorn>=0.44.0",
    "watchdog>=6.0.0",
    "xllamacpp>=0.2.13",
]

# ==============================================================================
# Optional dependency groups
# ==============================================================================
[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pyinstaller>=6.19.0",
    "pymupdf>=1.27.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.1",
]

# ==============================================================================
# Build system
# ==============================================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/informity"]

# ==============================================================================
# Tool configuration
# ==============================================================================
[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # Depends() in function defaults — standard FastAPI pattern
]

[tool.ruff.lint.isort]
known-first-party = ["informity"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src", "."]
addopts = "-m \"not integration and not diagnostics\""
markers = [
    "integration: tests that require external models/resources or slower end-to-end paths",
    "diagnostics: tests for diagnostics tooling and optional diagnostics package paths",
]
